--- a/.github/ISSUE_TEMPLATE/03-documentation.yml
+++ b/.github/ISSUE_TEMPLATE/03-documentation.yml
@@ -1,21 +1,25 @@
-name: Documentation request
-description: A request for new or updated documentation.
+# Copyright Materialize, Inc. and contributors. All rights reserved.
+#
+# Use of this software is governed by the Business Source License
+# included in the LICENSE file at the root of this repository.
+#
+# As of the Change Date specified in that file, in accordance with
+# the Business Source License, use of this software will be governed
+# by the Apache License, Version 2.0.
+
+name: Documentation
+description: A request for new or updated documentation. For example, "Add an integration guide for MySQL CDC".
 labels: A-docs
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for your interest in helping us improve the Materialize documentation!
   - type: textarea
     attributes:
-      label: What pages are affected?
+      label: Documentation request
   - type: textarea
     attributes:
-      label: What needs to be changed or added?
-  - type: textarea
-    attributes:
-      label: Feature description
-  - type: input
-    attributes:
-      label: Engineering tracking ticket
-  - type: textarea
-    attributes:
-      label: Design documents
+      label: Related work
       description: |
-        Please link any available design documents, like technical specs, product specs, or test files.
+        If relevant, link to related work that can provide more context (e.g. design documents, tracking issues).
